// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostLoanedDocumentsList tests should load the component 1`] = `
<Grid
  columns={1}
>
  <GridColumn>
    <Header
      as="h3"
    >
      Pick range of dates
      <HeaderSubheader>
        Choose between which dates to search the most loaned documents
      </HeaderSubheader>
    </Header>
    <List
      horizontal={true}
    >
      <ListItem>
        <ListContent>
          <DatePicker
            defaultValue=""
            handleDateChange={[Function]}
            initialDate=""
            maxDate=""
            minDate=""
            name="selectedDate"
            placeholder="From Date"
          />
        </ListContent>
      </ListItem>
      <ListItem>
        <ListContent>
          <DatePicker
            defaultValue=""
            handleDateChange={[Function]}
            initialDate=""
            maxDate=""
            minDate=""
            name="selectedDate"
            placeholder="To Date"
          />
        </ListContent>
      </ListItem>
    </List>
  </GridColumn>
  <GridColumn>
    <Grid
      columns={2}
    >
      <GridColumn>
        <Header
          as="h3"
        >
          Most Loaned Documents
          <HeaderSubheader>
            Showing the 0 most checked-out documents.
          </HeaderSubheader>
        </Header>
      </GridColumn>
      <GridColumn
        textAlign="right"
      >
        <ExportSearchResults
          onExportClick={[Function]}
        />
      </GridColumn>
    </Grid>
  </GridColumn>
  <GridColumn>
    <Loader>
      <Error>
        <DocumentList
          hits={Array []}
        />
      </Error>
    </Loader>
  </GridColumn>
</Grid>
`;

exports[`MostLoanedDocumentsList tests should render show a message with no documents 1`] = `
<MostLoanedDocumentsList
  data={
    Object {
      "hits": Array [],
      "total": 0,
    }
  }
  fetchMostLoanedDocuments={[Function]}
>
  <Grid
    columns={1}
  >
    <div
      className="ui one column grid"
    >
      <GridColumn>
        <div
          className="column"
        >
          <Header
            as="h3"
          >
            <h3
              className="ui header"
            >
              Pick range of dates
              <HeaderSubheader>
                <div
                  className="sub header"
                >
                  Choose between which dates to search the most loaned documents
                </div>
              </HeaderSubheader>
            </h3>
          </Header>
          <List
            horizontal={true}
          >
            <div
              className="ui horizontal list"
              role="list"
            >
              <ListItem>
                <div
                  className="item"
                  onClick={[Function]}
                  role="listitem"
                >
                  <ListContent>
                    <div
                      className="content"
                    >
                      <DatePicker
                        defaultValue=""
                        handleDateChange={[Function]}
                        initialDate=""
                        maxDate=""
                        minDate=""
                        name="selectedDate"
                        placeholder="From Date"
                      >
                        <DateInput
                          autoComplete="off"
                          clearable={true}
                          closable={true}
                          data-test=""
                          dateFormat="DD-MM-YYYY"
                          icon="calendar"
                          iconPosition="left"
                          initialDate=""
                          inline={false}
                          localization="en"
                          maxDate=""
                          minDate=""
                          name="selectedDate"
                          onChange={[Function]}
                          placeholder="From Date"
                          preserveViewMode={true}
                          startMode="day"
                          value=""
                        >
                          <InputView
                            animation="scale"
                            autoComplete="off"
                            clearIcon="remove"
                            clearable={true}
                            closeOnMouseLeave={true}
                            closePopup={[Function]}
                            data-test=""
                            duration={200}
                            icon="calendar"
                            iconPosition="left"
                            inline={false}
                            name="selectedDate"
                            onChange={[Function]}
                            onFocus={[Function]}
                            onMount={[Function]}
                            openPopup={[Function]}
                            placeholder="From Date"
                            popupIsClosed={true}
                            renderPicker={[Function]}
                            tabIndex="0"
                            value=""
                          >
                            <FormInputWithRef
                              autoComplete="off"
                              clearIcon="remove"
                              clearable={true}
                              data-test=""
                              icon="calendar"
                              iconPosition="left"
                              innerRef={[Function]}
                              name="selectedDate"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClear={[Function]}
                              onFocus={[Function]}
                              onMouseEnter={[Function]}
                              placeholder="From Date"
                              tabIndex="0"
                              value=""
                            >
                              <FormInput
                                as={[Function]}
                                autoComplete="off"
                                control={[Function]}
                                data-test=""
                                icon={true}
                                iconPosition="left"
                                name="selectedDate"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                placeholder="From Date"
                                tabIndex="0"
                              >
                                <FormField
                                  autoComplete="off"
                                  control={[Function]}
                                  data-test=""
                                  icon={true}
                                  iconPosition="left"
                                  name="selectedDate"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onMouseEnter={[Function]}
                                  placeholder="From Date"
                                  tabIndex="0"
                                >
                                  <div
                                    className="field"
                                  >
                                    <Input
                                      autoComplete="off"
                                      data-test=""
                                      icon={true}
                                      iconPosition="left"
                                      name="selectedDate"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseEnter={[Function]}
                                      placeholder="From Date"
                                      tabIndex="0"
                                      type="text"
                                    >
                                      <div
                                        className="ui left icon input"
                                        data-test=""
                                      >
                                        <Icon
                                          as="i"
                                          key=".0"
                                          name="calendar"
                                        >
                                          <i
                                            aria-hidden="true"
                                            className="calendar icon"
                                            onClick={[Function]}
                                          />
                                        </Icon>
                                        <input
                                          autoComplete="off"
                                          key=".1"
                                          name="selectedDate"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onClick={[Function]}
                                          onFocus={[Function]}
                                          onMouseEnter={[Function]}
                                          placeholder="From Date"
                                          tabIndex="0"
                                          type="text"
                                          value=""
                                        />
                                      </div>
                                    </Input>
                                  </div>
                                </FormField>
                              </FormInput>
                            </FormInputWithRef>
                            <Transition
                              animation="scale"
                              duration={200}
                              mountOnShow={true}
                              onComplete={[Function]}
                              transitionOnMount={false}
                              unmountOnHide={true}
                              visible={false}
                            />
                          </InputView>
                        </DateInput>
                      </DatePicker>
                    </div>
                  </ListContent>
                </div>
              </ListItem>
              <ListItem>
                <div
                  className="item"
                  onClick={[Function]}
                  role="listitem"
                >
                  <ListContent>
                    <div
                      className="content"
                    >
                      <DatePicker
                        defaultValue=""
                        handleDateChange={[Function]}
                        initialDate=""
                        maxDate=""
                        minDate=""
                        name="selectedDate"
                        placeholder="To Date"
                      >
                        <DateInput
                          autoComplete="off"
                          clearable={true}
                          closable={true}
                          data-test=""
                          dateFormat="DD-MM-YYYY"
                          icon="calendar"
                          iconPosition="left"
                          initialDate=""
                          inline={false}
                          localization="en"
                          maxDate=""
                          minDate=""
                          name="selectedDate"
                          onChange={[Function]}
                          placeholder="To Date"
                          preserveViewMode={true}
                          startMode="day"
                          value=""
                        >
                          <InputView
                            animation="scale"
                            autoComplete="off"
                            clearIcon="remove"
                            clearable={true}
                            closeOnMouseLeave={true}
                            closePopup={[Function]}
                            data-test=""
                            duration={200}
                            icon="calendar"
                            iconPosition="left"
                            inline={false}
                            name="selectedDate"
                            onChange={[Function]}
                            onFocus={[Function]}
                            onMount={[Function]}
                            openPopup={[Function]}
                            placeholder="To Date"
                            popupIsClosed={true}
                            renderPicker={[Function]}
                            tabIndex="0"
                            value=""
                          >
                            <FormInputWithRef
                              autoComplete="off"
                              clearIcon="remove"
                              clearable={true}
                              data-test=""
                              icon="calendar"
                              iconPosition="left"
                              innerRef={[Function]}
                              name="selectedDate"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClear={[Function]}
                              onFocus={[Function]}
                              onMouseEnter={[Function]}
                              placeholder="To Date"
                              tabIndex="0"
                              value=""
                            >
                              <FormInput
                                as={[Function]}
                                autoComplete="off"
                                control={[Function]}
                                data-test=""
                                icon={true}
                                iconPosition="left"
                                name="selectedDate"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                placeholder="To Date"
                                tabIndex="0"
                              >
                                <FormField
                                  autoComplete="off"
                                  control={[Function]}
                                  data-test=""
                                  icon={true}
                                  iconPosition="left"
                                  name="selectedDate"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onMouseEnter={[Function]}
                                  placeholder="To Date"
                                  tabIndex="0"
                                >
                                  <div
                                    className="field"
                                  >
                                    <Input
                                      autoComplete="off"
                                      data-test=""
                                      icon={true}
                                      iconPosition="left"
                                      name="selectedDate"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseEnter={[Function]}
                                      placeholder="To Date"
                                      tabIndex="0"
                                      type="text"
                                    >
                                      <div
                                        className="ui left icon input"
                                        data-test=""
                                      >
                                        <Icon
                                          as="i"
                                          key=".0"
                                          name="calendar"
                                        >
                                          <i
                                            aria-hidden="true"
                                            className="calendar icon"
                                            onClick={[Function]}
                                          />
                                        </Icon>
                                        <input
                                          autoComplete="off"
                                          key=".1"
                                          name="selectedDate"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onClick={[Function]}
                                          onFocus={[Function]}
                                          onMouseEnter={[Function]}
                                          placeholder="To Date"
                                          tabIndex="0"
                                          type="text"
                                          value=""
                                        />
                                      </div>
                                    </Input>
                                  </div>
                                </FormField>
                              </FormInput>
                            </FormInputWithRef>
                            <Transition
                              animation="scale"
                              duration={200}
                              mountOnShow={true}
                              onComplete={[Function]}
                              transitionOnMount={false}
                              unmountOnHide={true}
                              visible={false}
                            />
                          </InputView>
                        </DateInput>
                      </DatePicker>
                    </div>
                  </ListContent>
                </div>
              </ListItem>
            </div>
          </List>
        </div>
      </GridColumn>
      <GridColumn>
        <div
          className="column"
        >
          <Grid
            columns={2}
          >
            <div
              className="ui two column grid"
            >
              <GridColumn>
                <div
                  className="column"
                >
                  <Header
                    as="h3"
                  >
                    <h3
                      className="ui header"
                    >
                      Most Loaned Documents
                      <HeaderSubheader>
                        <div
                          className="sub header"
                        >
                          Showing the 0 most checked-out documents.
                        </div>
                      </HeaderSubheader>
                    </h3>
                  </Header>
                </div>
              </GridColumn>
              <GridColumn
                textAlign="right"
              >
                <div
                  className="right aligned column"
                >
                  <ExportSearchResults
                    onExportClick={[Function]}
                  />
                </div>
              </GridColumn>
            </div>
          </Grid>
        </div>
      </GridColumn>
      <GridColumn>
        <div
          className="column"
        >
          <Loader>
            <Error>
              <DocumentList
                hits={Array []}
              >
                <Message
                  data-test="no-results"
                >
                  <div
                    className="ui message"
                    data-test="no-results"
                  >
                    There are no documents.
                  </div>
                </Message>
              </DocumentList>
            </Error>
          </Loader>
        </div>
      </GridColumn>
    </div>
  </Grid>
</MostLoanedDocumentsList>
`;
